# shaving-tools-project

./: .gitignore  .prettierignore  .prettierrc  .windsurfrules  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/battery-monitor/: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
apps/battery-monitor/app/: build.gradle.kts  proguard-rules.pro
apps/camera-tools/: package.json  tailwind.config.ts  tsconfig.json
apps/camera-tools/app/: globals.css  layout.tsx  page.tsx
apps/camera-tools/hooks/: useKeyboardShortcuts.tsx
apps/camera-tools/stores/: camera-store.ts
apps/camera-tools/types/: index.ts
apps/game-fps-monitor/android/: README.md  settings.gradle.kts
apps/game-fps-monitor/desktop/: package.json  tailwind.config.js  tsconfig.main.json  vite.config.ts
apps/soc-analyzer-android/: README.md  settings.gradle.kts
apps/soc-analyzer-android/app/: build.gradle.kts
apps/soc-analyzer-pc/: .eslintrc.js  README.md  package.json  tailwind.config.js
apps/soc-analyzer-pc/app/: globals.css  page.tsx  (+1 more)
apps/soc-analyzer-pc/src-tauri/: Cargo.toml  tauri.conf.json
apps/soc-analyzer-pc/src-tauri/src/: adb.rs  device.rs  main.rs  websocket.rs
apps/web/: README.md  package.json  tailwind.config.ts  tsconfig.json
docs/: 用户使用手册.md
docs/develope/: APP性能分析工具开发文档.md  SoC芯片性能深度分析平台开发文档.md  屏幕显示测试工具开发文档.md  性能衰退追踪器开发文档.md  手机AI性能测试套件开发文档.md  散热性能可视化开发文档.md  游戏帧率监控工具开发文档.md  电池续航分析工具开发文档.md  相机评测工具套件开发文档.md  网络性能测试工具开发文档.md
docs/markdown/: 手机硬件评测工具策划.md  技术实现方案.md  综合策划总览.md  自媒体账号起号策划.md  补充项目方案.md  项目开发清单.md
(+252 files in other folders)
