[package]
name = "soc-analyzer-pro"
version = "1.0.0"
description = "SoC芯片性能深度分析平台"
authors = ["SoC Analyzer Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open",
    "fs-all",
    "path-all",
    "dialog-all",
    "notification-all",
    "os-all",
    "process-all",
    "protocol-asset",
    "window-all",
    "updater"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
local-ip-address = "0.5"
mdns-sd = "0.10"
adb_client = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
